# bitvector

./: CMakeLists.txt  README.md  REPORT.md
cmake/: add_pasta_bit_vector.cmake  less_verbose_ide.cmake
include/bitvector/: bit.h  bits.h  bitsvector.h  bitvector.h  bitvector_view.h  traits.h
include/bitvector/accelerator/: accessor.h  better_select.h  const_rank.h  const_select.h  linear_rank.h  linear_select.h
include/bitvector/util/: math.h  sanity.h
scripts/: fuzz_test.py  plot_size_real.py  plot_size_theory.py  plot_time.py  util.py
src/: main.cpp  parse.h  pasta_bit_vector.h
test/: test_bit.cpp  test_bit_vector.cpp  test_bit_vector_view.cpp  test_bits_container.cpp  test_bits_reference.cpp  test_bits_vector.cpp
